Add redirect to Nebulla soutez

--- a/www.hookamonk.com/src/html/catering/index.njk
+++ b/www.hookamonk.com/src/html/catering/index.njk
@@ -21,339 +21,11 @@
   <meta property="og:type" content="company">
   <meta property="og:url" content="https://www.hookamonk.com/">
   <meta property="og:site_name" content="hookamonk.com">
-  <style>
-    .hm-hero-wrapper {
-      padding-bottom: 0;
-    }
-    #page-hookamonk-catering .hm-hero__sub-header {
-      color: var(--hm-black);
-      background-color: #FFF;
-      max-width: 1000px;
-      margin: 1em auto 0;
-      padding: 1em;
-      font-weight: 400;
-    }
-    @media screen and (max-width: 479px) {
-      .hm-hero-wrapper {
-        background: url({{ "hookamonk.com/bgnd_header_catering.png" | cloudinaryUrl(width=800) }}) no-repeat fixed top center;
-        background-size: cover;
-      }
-    }
-
-    @media screen and (max-width: 479px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 479px) and (min--moz-device-pixel-ratio: 2), screen and (max-width: 479px) and (-o-min-device-pixel-ratio: 2/1), screen and (max-width: 479px) and (min-device-pixel-ratio: 2), screen and (max-width: 479px) and (min-resolution: 192dpi), screen and (max-width: 479px) and (min-resolution: 2dppx) {
-      .hm-hero-wrapper {
-        background: url({{"hookamonk.com/bgnd_header_catering.png" | cloudinaryUrl(width=800,dpr=2)}}) no-repeat fixed top center;
-        background-size: cover;
-      }
-    }
-
-    @media screen and (min-width: 480px) {
-      .hm-hero-wrapper {
-        background: url({{"hookamonk.com/bgnd_header_catering.png" | cloudinaryUrl(width=1671)}}) no-repeat fixed top center;
-        background-size: cover;
-      }
-    }
-
-    @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
-      .hm-hero-wrapper {
-        background: url({{"hookamonk.com/bgnd_header_catering.png" | cloudinaryUrl(width=1671,dpr=2)}}) no-repeat fixed top center;
-        background-size: cover;
-      }
-    }
-  </style>
+  <script>
+    window.location.replace("https://www.facebook.com/events/399694521353612/");
+  </script>
 {% endblock %}
 
-{% block content %}
-  {{ css("hero") }}
-  <div class="mdc-layout-grid hm-hero-wrapper">
-    <div class="mdc-layout-grid__inner">
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <section class="hm-hero">
-          <h1 class="hm-hero__header">Hi-tech
-            unique solution for demanding users</h1>
-          <h2 class="hm-hero__sub-header">
-            If you want hookamonk for your lounge please contact us on email: <a href="mailto:sales@hookamonk.com">sales@hookamonk.com</a>
-          </h2>
-        </section>
-      </div>
-    </div>
-  </div>
-  {{ css("catering") }}
-  <div class="mdc-layout-grid hm-section-features">
-    <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-section-features__feature">
-        <div class="material-icons">
-          <svg viewBox="0 0 24 24">
-            <path fill="currentColor" d="M16.56,5.44L15.11,6.89C16.84,7.94 18,9.83 18,12A6,6 0 0,1 12,18A6,6 0 0,1 6,12C6,9.83 7.16,7.94 8.88,6.88L7.44,5.44C5.36,6.88 4,9.28 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12C20,9.28 18.64,6.88 16.56,5.44M13,3H11V13H13" />
-          </svg>
-        </div>
-        <div>
-          <h3 hm-section-features__feature>Heating only by electronics</h3>
-          <p>There are no charcoals in hookamonk. All heating is made by spiral heated from electronic devices in head. Tobacco is heated the same way as in classic hookah only charcoals are replaced by the spiral.
-        </p>
-        </div>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-section-features__feature">
-        <div class="material-icons">
-          <svg viewBox="0 0 24 24">
-            <path fill="currentColor" d="M7.95,3L6.53,5.19L7.95,7.4H7.94L5.95,10.5L4.22,9.6L5.64,7.39L4.22,5.19L6.22,2.09L7.95,3M13.95,2.89L12.53,5.1L13.95,7.3L13.94,7.31L11.95,10.4L10.22,9.5L11.64,7.3L10.22,5.1L12.22,2L13.95,2.89M20,2.89L18.56,5.1L20,7.3V7.31L18,10.4L16.25,9.5L17.67,7.3L16.25,5.1L18.25,2L20,2.89M2,22V14A2,2 0 0,1 4,12H20A2,2 0 0,1 22,14V22H20V20H4V22H2M6,14A1,1 0 0,0 5,15V17A1,1 0 0,0 6,18A1,1 0 0,0 7,17V15A1,1 0 0,0 6,14M10,14A1,1 0 0,0 9,15V17A1,1 0 0,0 10,18A1,1 0 0,0 11,17V15A1,1 0 0,0 10,14M14,14A1,1 0 0,0 13,15V17A1,1 0 0,0 14,18A1,1 0 0,0 15,17V15A1,1 0 0,0 14,14M18,14A1,1 0 0,0 17,15V17A1,1 0 0,0 18,18A1,1 0 0,0 19,17V15A1,1 0 0,0 18,14Z" />
-          </svg>
-        </div>
-        <div>
-          <h3>Smart inhale detection</h3>
-          <p>Electronic head reacts to inhales. When you breathe in, it will warm the tobacco, when you don't smoke it maintains the temperature.</p>
-        </div>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-section-features__feature">
-        <div class="material-icons">
-          <svg viewBox="0 0 24 24">
-            <path fill="currentColor" d="M16 17V19H2V17S2 13 9 13 16 17 16 17M12.5 7.5A3.5 3.5 0 1 0 9 11A3.5 3.5 0 0 0 12.5 7.5M15.94 13A5.32 5.32 0 0 1 18 17V19H22V17S22 13.37 15.94 13M15 4A3.39 3.39 0 0 0 13.07 4.59A5 5 0 0 1 13.07 10.41A3.39 3.39 0 0 0 15 11A3.5 3.5 0 0 0 15 4Z" />
-          </svg>
-        </div>
-        <div>
-          <h3>No staff</h3>
-          <p>You need shishaman only to fill the bowl with tobacco. There is no need to take care about charcoals and change them during the session.
-          </p>
-        </div>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-section-features__feature">
-        <div class="material-icons">
-          <svg viewBox="0 0 24 24">
-            <path fill="currentColor" d="M12.5 7C12.5 5.89 13.39 5 14.5 5H18C19.1 5 20 5.9 20 7V9.16C18.84 9.57 18 10.67 18 11.97V14H12.5V7M6 11.96V14H11.5V7C11.5 5.89 10.61 5 9.5 5H6C4.9 5 4 5.9 4 7V9.15C5.16 9.56 6 10.67 6 11.96M20.66 10.03C19.68 10.19 19 11.12 19 12.12V15H5V12C5 10.9 4.11 10 3 10S1 10.9 1 12V17C1 18.1 1.9 19 3 19V21H5V19H19V21H21V19C22.1 19 23 18.1 23 17V12C23 10.79 21.91 9.82 20.66 10.03Z" />
-          </svg>
-        </div>
-        <div>
-          <h3>No burnt furniture</h3>
-          <p>If there are charcoals, there are no cinders that could damage your couch, chairs or table.</p>
-        </div>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-section-features__feature">
-        <div class="material-icons">
-          <svg viewBox="0 0 24 24">
-            <path fill="currentColor" d="M20,8H4V6H20M20,18H4V12H20M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z" />
-          </svg>
-        </div>
-        <div>
-          <h3>You pay as you smoke</h3>
-          <p>Hookamonk is not for sell. Lounges pay only for finished sessions.</p>
-        </div>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-section-features__feature">
-        <div class="material-icons">
-          <svg viewBox="0 0 24 24">
-            <path fill="currentColor" d="M17,13L12,18L7,13H10V9H14V13M19.35,10.03C18.67,6.59 15.64,4 12,4C9.11,4 6.6,5.64 5.35,8.03C2.34,8.36 0,10.9 0,14A6,6 0 0,0 6,20H19A5,5 0 0,0 24,15C24,12.36 21.95,10.22 19.35,10.03Z" />
-          </svg>
-        </div>
-        <div>
-          <h3>New features updated automatically</h3>
-          <p>Hookah is still connected to wifi. You will receive every update automatically.</p>
-        </div>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-section-features__feature">
-        <div class="material-icons">
-          <svg viewBox="0 0 24 24">
-            <path fill="currentColor" d="M20.84 22.73L16.29 18.18C15.2 19.3 13.69 20 12 20C8.69 20 6 17.31 6 14C6 12.67 6.67 11.03 7.55 9.44L1.11 3L2.39 1.73L22.11 21.46L20.84 22.73M18 14C18 10 12 3.25 12 3.25S10.84 4.55 9.55 6.35L17.95 14.75C18 14.5 18 14.25 18 14Z" />
-          </svg>
-        </div>
-        <div>
-          <h3>First electronic hookah for tobacco</h3>
-          <p>There is no e-liquid in hookamonk. You can use any tobacco you love and enjoy its clear taste.</p>
-        </div>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-section-features__feature">
-        <div class="material-icons">
-          <svg viewBox="0 0 24 24">
-            <path fill="currentColor" d="M12 2C17.5 2 22 6.5 22 12C22 17.5 17.5 22 12 22C6.5 22 2 17.5 2 12C2 6.5 6.5 2 12 2M12 4C7.58 4 4 7.58 4 12C4 16.42 7.58 20 12 20C16.42 20 20 16.42 20 12C20 7.58 16.42 4 12 4M12 5C15.87 5 19 8.13 19 12C19 15.87 15.87 19 12 19C10.07 19 8.32 18.22 7.05 16.95L12 12V5Z" />
-          </svg>
-        </div>
-        <div>
-          <h3>Intensity regulation</h3>
-          <p>Whether you like your hookah stronger or smoother, you can change its intensity on display or in your mobile app.</p>
-        </div>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-section-features__feature">
-        <div class="material-icons">
-          <svg viewBox="0 0 24 24">
-            <path fill="currentColor" d="M11 6H14L17.29 2.7A1 1 0 0 1 18.71 2.7L21.29 5.29A1 1 0 0 1 21.29 6.7L19 9H11V11A1 1 0 0 1 10 12A1 1 0 0 1 9 11V8A2 2 0 0 1 11 6M5 11V15L2.71 17.29A1 1 0 0 0 2.71 18.7L5.29 21.29A1 1 0 0 0 6.71 21.29L11 17H15A1 1 0 0 0 16 16V15H17A1 1 0 0 0 18 14V13H19A1 1 0 0 0 20 12V11H13V12A2 2 0 0 1 11 14H9A2 2 0 0 1 7 12V9Z" />
-          </svg>
-        </div>
-        <div>
-          <h3>Compatibility with other hookahs</h3>
-          <p>Electronic head is possible to place on most of the usual hookahs, heat managements and bowls.</p>
-        </div>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-section-features__feature">
-        <div class="material-icons">
-          <svg viewBox="0 0 24 24">
-            <path fill="currentColor" d="M20,10C22,13 17,22 15,22C13,22 13,21 12,21C11,21 11,22 9,22C7,22 2,13 4,10C6,7 9,7 11,8V5C5.38,8.07 4.11,3.78 4.11,3.78C4.11,3.78 6.77,0.19 11,5V3H13V8C15,7 18,7 20,10Z" />
-          </svg>
-        </div>
-        <div>
-          <h3>Consistent taste</h3>
-          <p>With hookamonk, the taste of tobacco remains still the same during the session.</p>
-        </div>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-section-features__feature">
-        <div class="material-icons">
-          <svg viewBox="0 0 24 24">
-            <path fill="currentColor" d="M19,19H4V3H19M11.5,23A1.5,1.5 0 0,1 10,21.5A1.5,1.5 0 0,1 11.5,20A1.5,1.5 0 0,1 13,21.5A1.5,1.5 0 0,1 11.5,23M18.5,0H4.5A2.5,2.5 0 0,0 2,2.5V21.5A2.5,2.5 0 0,0 4.5,24H18.5A2.5,2.5 0 0,0 21,21.5V2.5A2.5,2.5 0 0,0 18.5,0Z" />
-          </svg>
-        </div>
-        <div>
-          <h3>Lounge app</h3>
-          <p>The Lounge App helps lounge staff to manage Hookamonk devices. It features an overview of running table sessions, monitors session run time, maintenance status and allows to remotely control the hookahs.</p>
-        </div>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-section-features__feature">
-        <div class="material-icons">
-          <svg viewBox="0 0 24 24">
-            <path fill="currentColor" d="M16,18H7V4H16M11.5,22A1.5,1.5 0 0,1 10,20.5A1.5,1.5 0 0,1 11.5,19A1.5,1.5 0 0,1 13,20.5A1.5,1.5 0 0,1 11.5,22M15.5,1H7.5A2.5,2.5 0 0,0 5,3.5V20.5A2.5,2.5 0 0,0 7.5,23H15.5A2.5,2.5 0 0,0 18,20.5V3.5A2.5,2.5 0 0,0 15.5,1Z" />
-          </svg>
-        </div>
-        <div>
-          <h3>Mobile app</h3>
-          <p>Mobile app for Android and iOS. You can use it to change intensity of your hookah or create a diary with your sessions.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid__inner tm-layout-wrapper hm-section-products">
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12" style="text-align: center">
-        <h2 class="hm-h2">Products</h2>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--align-middle hm-order-desktop--2">
-        <h3 class="hm-h2">Mobile box</h3>
-        <p>Portable version of hookamonk. It's possible to use it with any table you have. All you need is source of electricity and wifi connection.</p>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 hm-order-desktop--1">
-        <img title="Hookamonk box product photo"
-             alt="[photo] Hookamonk box product photo"
-             class="img-fullwidth-phone hk-img-product"
-             src="{{ "hookamonk.com/img_box.png" | cloudinaryUrl(width=530) }}"
-             srcset="{{ "hookamonk.com/img_box.png" | cloudinaryUrl(width=530) }} 1x,
-                     {{ "hookamonk.com/img_box.png" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
-                     {{ "hookamonk.com/img_box.png" | cloudinaryUrl(width=530,dpr=2) }} 2x" />
-      </div>
-    </div>
-    <div class="mdc-layout-grid__inner tm-layout-wrapper hm-section-products">
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--align-middle">
-        <h3 class="hm-h2">Table</h3>
-        <p>Specific table designed for hookamonk. Display is built in. All electronic is built in. You only add shisha with an electronic head.</p>
-      </div>
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
-        <img title="Hookamonk table product photo"
-             alt="[photo] Hookamonk table product photo"
-             class="img-fullwidth-phone hk-img-product"
-             src="{{ "hookamonk.com/img_table.png" | cloudinaryUrl(width=530) }}"
-             srcset="{{ "hookamonk.com/img_table.png" | cloudinaryUrl(width=530) }} 1x,
-                     {{ "hookamonk.com/img_table.png" | cloudinaryUrl(width=530,dpr=1.5) }} 1.5x,
-                     {{ "hookamonk.com/img_table.png" | cloudinaryUrl(width=530,dpr=2) }} 2x"/>
-      </div>
-    </div>
-  </div>
-  <div class="mdc-layout-grid">
-    <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12" style="text-align: center">
-        <h2 class="hm-h2">Overview</h2>
-        <div class="hm-video-wrapper">
-          <video class="hm-overview-video" playsinline autoplay loop muted>
-            <source src="https://res.cloudinary.com/topmonks/video/upload/f_mp4,w_800/v1607417422/hookamonk.com/hookamonk_animace.mov" type="video/mp4">
-            <source src="https://res.cloudinary.com/topmonks/video/upload/f_webm,w_800/v1607417422/hookamonk.com/hookamonk_animace.mov" type="video/webm">
-            <source src="https://res.cloudinary.com/topmonks/video/upload/f_ogg,w_800/v1607417422/hookamonk.com/hookamonk_animace.mov" type="video/ogg">
-            Your browser does not support the video tag.
-          </video>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="hm-section-apps">
-    <div class="mdc-layout-grid tm-bgnd-wrapper">
-      <div class="mdc-layout-grid__inner tm-layout-wrapper">
-        <div
-          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
-          style="text-align: center">
-          <h2 class="hm-h2">
-            Applications
-          </h2>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--align-middle">
-          <h3 class="hm-h2">
-            Lounge app
-          </h3>
-          <h4>Features</h4>
-          <ul class="hm-formatted">
-            <li>Management of Hookamonk devices</li>
-            <li>Overview of running sessions</li>
-            <li>Monitoring of session run time</li>
-            <li>Maintenance status</li>
-            <li>Allows to remotely control hookahs</li>
-          </ul>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-desktop">
-          <figure class="hm-img--lounge-app"></figure>
-        </div>
-
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--align-middle hm-order-desktop--2">
-          <h3 class="hm-h2">
-            Mobile app
-          </h3>
-          <h4>Features</h4>
-          <ul class="hm-formatted">
-            <li>Manage intensity of your hookah session</li>
-            <li>Track your sessions and rate them</li>
-            <li>Track tobaccos you've tried and keep them in diary</li>
-            <li>Earn hookacoins</li>
-            <p>
-              <a href="https://apps.apple.com/cz/app/session-monk/id1489139811" title="Hookamonk mobile app available on Apple App Store">
-                <img alt="[photo] Hookamonk mobile app available on Apple App Store"
-                     src="{{ "hookamonk.com/img_appstore.png" | cloudinaryUrl(width=209) }}"
-                     srcset="{{ "hookamonk.com/img_appstore.png" | cloudinaryUrl(width=209) }} 1x,
-                       {{ "hookamonk.com/img_appstore.png" | cloudinaryUrl(width=209,dpr=1.5) }} 1.5x,
-                       {{ "hookamonk.com/img_appstore.png" | cloudinaryUrl(width=209,dpr=2) }} 2x" />
-              </a>
-              <a href="https://play.google.com/store/apps/details?id=com.topmonks.sessionmonk" title="Hookamonk mobile app available on Google Play">
-                <img alt="[photo] Hookamonk mobile app available on Google Play"
-                     src="{{ "hookamonk.com/img_google_play.png" | cloudinaryUrl(width=209) }}"
-                     srcset="{{ "hookamonk.com/img_google_play.png" | cloudinaryUrl(width=209) }} 1x,
-                         {{ "hookamonk.com/img_google_play.png" | cloudinaryUrl(width=209,dpr=1.5) }} 1.5x,
-                         {{ "hookamonk.com/img_google_play.png" | cloudinaryUrl(width=209,dpr=2) }} 2x" />
-              </a>
-            </p>
-          </ul>
-        </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-6-desktop hm-order-desktop--1">
-          <img title="Hookamonk mobile app"
-               alt="[photo] Hookamonk mobile app"
-               class="img-fullwidth-phone"
-               src="{{ "hookamonk.com/img_mobile_app.png" | cloudinaryUrl(width=647) }}"
-               srcset="{{ "hookamonk.com/img_mobile_app.png" | cloudinaryUrl(width=647) }} 1x,
-                       {{ "hookamonk.com/img_mobile_app.png" | cloudinaryUrl(width=647,dpr=1.5) }} 1.5x,
-                       {{ "hookamonk.com/img_mobile_app.png" | cloudinaryUrl(width=647,dpr=2) }} 2x" />
-        </div>
-      </div>
-    </div>
-  </div>
-{% endblock %}
 
 {% block footer %}
   {% include "./components/footer.njk" %}
