--- a/www.hookamonk.com/src/html/catering/index.njk
+++ b/www.hookamonk.com/src/html/catering/index.njk
@@ -1,32 +1,12 @@
-{% extends 'layouts/main.njk' %}
-{% from 'macros/helpers.njk' import css, sprite %}
-
-{% set page = 'hookamonk-catering' %}
-{% set language = en %}
-
-{% block title %}
-  Hookamonk - Game changer in Hookah
-{% endblock %}
-
-{% block head %}
+<head>
   <meta name="description"
         content="First fully electronic hookah for tobacco.">
   <meta name="twitter:description" property="og:description"
         content="First fully electronic hookah for tobacco.">
-  <link rel="canonical" href="https://www.hookamonk.com/">
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@topmonks">
-  <meta name="twitter:title" property="og:title" content="Game changer in hookah.">
-  <meta name="twitter:image" property="og:image" content="https://www.hookamonk.com/og-image.jpg">
-  <meta property="og:type" content="company">
-  <meta property="og:url" content="https://www.hookamonk.com/">
-  <meta property="og:site_name" content="hookamonk.com">
   <script>
     window.location.replace("https://www.facebook.com/events/399694521353612/");
   </script>
-{% endblock %}
-
-
-{% block footer %}
-  {% include "./components/footer.njk" %}
-{% endblock %}
+</head>
+<body>
+  <p>If you are not redirected in five seconds, <a href="https://www.facebook.com/events/399694521353612/">click here</a>.</p>
+</body>
