--- a/www.hookamonk.com/src/html/soutez/index.njk
+++ b/www.hookamonk.com/src/html/soutez/index.njk
@@ -6,7 +6,7 @@
     <meta name=robots content=noindex>
     <meta http-equiv=refresh content="0;url=https://www.facebook.com/events/399694521353612/"">
     <link rel=canonical href="https://www.facebook.com/events/399694521353612/">
-    <script>window.location.replace('https://www.facebook.com/events/399694521353612/"');</script>
+    <script>window.location.replace('https://www.facebook.com/events/399694521353612/');</script>
 </head>
 
 <body>This page has been moved to <a
