--- a/chytrybox.cz/src/stylesheets/typography.scss
+++ b/chytrybox.cz/src/stylesheets/typography.scss
@@ -16,7 +16,7 @@ body {
     font-size: 40px;
     font-weight: 800;
     line-height: 48px;
-    //color: #FFFFFF;
+    color: #FFFFFF;
   }
 
   h2 {
@@ -39,7 +39,7 @@ body {
     font-size: 36px;
     font-weight: 800;
     line-height: 42px;
-    //color: #FFFFFF;
+    color: #FFFFFF;
   }
 
   h2 {
