--- a/chytrybox.cz/src/stylesheets/main.scss
+++ b/chytrybox.cz/src/stylesheets/main.scss
@@ -170,7 +170,10 @@ body {
       margin-top: 40px;
       height: 48px;
       width: 86%;
-
+      &:hover {
+        cursor: pointer;
+        background: #140a3d;
+      }
     }
   }
 
@@ -215,5 +218,7 @@ footer {
     line-height: 32px;
     padding: 18px 0;
   }
+
+
 }
 
