--- a/chytrybox.cz/src/stylesheets/typography.scss
+++ b/chytrybox.cz/src/stylesheets/typography.scss
@@ -68,6 +68,7 @@ body {
   text-decoration: none;
   text-transform: uppercase;
   &:hover {
+    cursor: pointer;
     background-color: #140a3d;
   }
 }
