--- a/chytrybox.cz/src/stylesheets/main.scss
+++ b/chytrybox.cz/src/stylesheets/main.scss
@@ -156,7 +156,8 @@ body {
       border: 1px solid #DDDDDD;
       border-radius: 30px;
       height: 48px;
-      width: 85%;
+      width: 80%;
+      padding-left: 20px;
     }
 
     button {
