--- a/www.topmonks.cz/src/html/index.njk
+++ b/www.topmonks.cz/src/html/index.njk
@@ -76,7 +76,7 @@
         </div>
         <div class="box represent mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop">
-            <p><span>8</span><br>Let na trhu</p>
+            <p><span>10</span><br>Let na trhu</p>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop">
             <p><span>55</span><br>Vývojářů</p>
@@ -88,7 +88,7 @@
             <p><span>100+</span><br>Zákazníků</p>
           </div>
           <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-desktop">
-            <p><span>12</span><br>Startupů</p>
+            <p><span>17</span><br>Startupů</p>
           </div>
         </div>
       </div>
@@ -240,24 +240,24 @@
           <div class="mdc-layout-grid__inner">
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
               <a href="https://apify.com/enterprise"
-                 title="Apify homepage">{{ sprite('img_logo_apify', '[logo] Apify') }}
+                 title="Apify homepage">{{ sprite('img_logo_apify', 'Apify') }}
               </a>
             </div>
 
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
               <a href="https://www.pricefx.eu/site/"
-                 title="Pricefx homepage">{{ sprite('img_logo_pricefx', '[logo] Pricefx') }}
+                 title="Pricefx homepage">{{ sprite('img_logo_pricefx', 'Pricefx') }}
               </a>
             </div>
 
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
               <a href="https://www.erstegroupit.com/"
-                 title="Erste Group homepage">{{ sprite('img_logo_erste-group', '[logo] Erste Group') }}</a>
+                 title="Erste Group homepage">{{ sprite('img_logo_erste-group', 'Erste Group') }}</a>
             </div>
 
 
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
-              <a href="https://zonky.cz/" title="Zonky homepage">{{ sprite('img_logo_zonky', '[logo] Zonky') }}</a>
+              <a href="https://zonky.cz/" title="Zonky homepage">{{ sprite('img_logo_zonky', 'Zonky') }}</a>
             </div>
 
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
@@ -267,7 +267,7 @@
 
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
               <a href="https://www.countrylife.cz/"
-                 title="jdi na Country Life homepage">{{ sprite('img_logo_country-life', '[logo] Country Life') }}</a>
+                 title="jdi na Country Life homepage">{{ sprite('img_logo_country-life', 'Country Life') }}</a>
             </div>
           </div>
         </div>
@@ -326,7 +326,7 @@
             programátorský&nbsp;tým.</p>
         </div>
         <div class="advicing_btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <a class="action-button jumbotron__cta" href="mailto:sales@​topmonks.com">NENAŠLI
+          <a class="action-button jumbotron__cta" href="mailto:sales@topmonks.com">NENAŠLI
             JSTE, CO VÁS TRÁPÍ?</a>
         </div>
       </div>
