--- a/chytrybox.cz/src/stylesheets/main.scss
+++ b/chytrybox.cz/src/stylesheets/main.scss
@@ -35,6 +35,7 @@ body {
   margin: 0 auto;
 }
 
+
 // Introduction //
 .intro {
   @media (min-width: 1840px) {
@@ -70,6 +71,7 @@ body {
     }
   }
 }
+
 
 // How it works //
 .how-it-works {
@@ -108,6 +110,7 @@ body {
     }
   }
 }
+
 
 // Contact //
 .contact {
@@ -210,6 +213,7 @@ body {
   }
 }
 
+// Footer //
 footer {
   padding: 20px 0;
   background: #403068;
@@ -222,6 +226,10 @@ footer {
     font-weight: normal;
     line-height: 32px;
     padding: 18px 0;
+  }
+
+  .footer__content {
+    align-self: center;
   }
 
   .footer__list {
