Změna v menu, stylizace - Chytry box

--- a/chytrybox.cz/src/stylesheets/header.scss
+++ b/chytrybox.cz/src/stylesheets/header.scss
@@ -23,7 +23,7 @@ header {
       margin-right: 44px;
       &:hover,
       &.active {
-        color: #403068;
+        text-decoration: underline;
       }
     }
   }
