--- a/www.ingridapp.io/src/stylesheets/_contact.scss
+++ b/www.ingridapp.io/src/stylesheets/_contact.scss
@@ -36,7 +36,7 @@ section.contact {
   }
 
   .c-column1 {
-    background-color: #EEEEEE;
+    background-color: #eeeeee;
     height: 80px;
   }
 
@@ -62,7 +62,7 @@ section.contact {
 
   .contact-side {
     font-size: 14px;
-    border-left: solid 1px #EEEEEE;
+    border-left: solid 1px #eeeeee;
     padding-left: 50px;
 
     a {
@@ -73,8 +73,6 @@ section.contact {
       padding-top: 50px;
     }
   }
-
-
 }
 
 .c-border {
