--- a/shared/src/sub-pages/case-studies.scss
+++ b/shared/src/sub-pages/case-studies.scss
@@ -14,7 +14,7 @@
       margin: 8px 0;
     }
   }
-  a:hover{
+  a:hover {
     text-decoration: none;
   }
 }
@@ -49,7 +49,7 @@
   }
   //svg logo colors
   .-img_logo_pricefx {
-    --color-2: #CFCFCF;
+    --color-2: #cfcfcf;
   }
 }
 .tm-case-studies__logo:hover {
