--- a/www.ingridapp.io/src/stylesheets/_global.scss
+++ b/www.ingridapp.io/src/stylesheets/_global.scss
@@ -1,33 +1,33 @@
 // Global styling for this template
 html,
 body {
-    width: 100%;
-    height: 100%;
-    font-size: 20px;
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
 }
 
 body {
-    @include body-font;
+  @include body-font;
 }
 
 a {
-    color: $theme-primary;
-    @include transition-all;
-    &:hover,
-    &:focus {
-        color: darken($theme-primary, 10%);
-    }
+  color: $theme-primary;
+  @include transition-all;
+  &:hover,
+  &:focus {
+    color: darken($theme-primary, 10%);
+  }
 }
 
 hr {
-    max-width: 100px;
-    margin: 25px auto 0;
-    border-width: 1px;
-    border-color: fade-out($gray-darker, .9);
+  max-width: 100px;
+  margin: 25px auto 0;
+  border-width: 1px;
+  border-color: fade-out($gray-darker, 0.9);
 }
 
 hr.light {
-    border-color: white;
+  border-color: white;
 }
 
 h1,
@@ -36,22 +36,22 @@ h3,
 h4,
 h5,
 h6 {
-    @include heading-font;
+  @include heading-font;
 }
 
 p {
-    font-size: 1rem;
-    line-height: 1.5;
-    margin-bottom: 20px;
+  font-size: 1rem;
+  line-height: 1.5;
+  margin-bottom: 20px;
 }
 
 section {
-    padding: 100px 0 0 0;
-    h2 {
-        font-size: 70px;
-    }
+  padding: 100px 0 0 0;
+  h2 {
+    font-size: 70px;
+  }
 }
 
 .title-font {
-    font-size: 50px;
+  font-size: 50px;
 }
