--- a/www.ingridapp.io/src/stylesheets/_navbar.scss
+++ b/www.ingridapp.io/src/stylesheets/_navbar.scss
@@ -1,88 +1,88 @@
 // Styling for the navbar
 #mainNav {
-    .navbar-logo {
-        --logo-color: #5f3b82;
-      transform: scale(1.8);
-    }
-    border-color: fade-out($gray-darker, .95);
-    background-color: white;
-    @include transition-all;
+  .navbar-logo {
+    --logo-color: #5f3b82;
+    transform: scale(1.8);
+  }
+  border-color: fade-out($gray-darker, 0.95);
+  background-color: white;
+  @include transition-all;
+  @include heading-font;
+  .navbar-brand {
+    color: $theme-primary;
     @include heading-font;
+    &:hover,
+    &:focus {
+      color: darken($theme-primary, 10%);
+    }
+  }
+  .navbar-toggler {
+    font-size: 18px;
+    padding: 8px 10px;
+    color: $gray-darker;
+  }
+  .navbar-nav {
+    > li {
+      > a {
+        font-size: 12px;
+        @include alt-font;
+        &.active {
+          color: $theme-primary !important;
+          background-color: transparent;
+          &:hover {
+            background-color: transparent;
+          }
+        }
+      }
+      > a,
+      > a:focus {
+        color: $gray-darker;
+        &:hover {
+          color: $theme-primary;
+        }
+      }
+    }
+  }
+  @media (min-width: 992px) {
+    border-color: transparent;
+    background-color: transparent;
     .navbar-brand {
-        color: $theme-primary;
-        @include heading-font;
+      color: fade(white, 70%);
+      &:hover,
+      &:focus {
+        color: white;
+      }
+    }
+    .navbar-logo {
+      --logo-color: #fff;
+    }
+    .navbar-nav > li > a,
+    .navbar-nav > li > a:focus {
+      color: fade-out(white, 0.3);
+      &:hover {
+        color: white;
+      }
+    }
+    &.navbar-shrink {
+      border-color: fade-out($gray-darker, 0.9);
+      background-color: white;
+      .navbar-brand {
+        color: $gray-darker;
         &:hover,
         &:focus {
-            color: darken($theme-primary, 10%);
-        }
-    }
-    .navbar-toggler {
-        font-size: 18px;
-        padding: 8px 10px;
-        color: $gray-darker;
-    }
-    .navbar-nav {
-        > li {
-            > a {
-                font-size: 12px;
-                @include alt-font;
-                &.active {
-                    color: $theme-primary !important;
-                    background-color: transparent;
-                    &:hover {
-                        background-color: transparent;
-                    }
-                }
-            }
-            > a,
-            > a:focus {
-                color: $gray-darker;
-                &:hover {
-                    color: $theme-primary;
-                }
-            }
-        }
-    }
-    @media (min-width: 992px) {
-        border-color: transparent;
-        background-color: transparent;
-        .navbar-brand {
-            color: fade(white, 70%);
-            &:hover,
-            &:focus {
-                color: white;
-            }
+          color: $theme-primary;
         }
         .navbar-logo {
-            --logo-color: #fff;
+          --logo-color: #5f3b82;
         }
-        .navbar-nav > li > a,
-        .navbar-nav > li > a:focus {
-            color: fade-out(white, .3);
-            &:hover {
-                color: white;
-            }
+      }
+      .navbar-nav > li > a,
+      .navbar-nav > li > a:focus {
+        color: $gray-darker;
+        &:hover {
+          color: $theme-primary;
         }
-        &.navbar-shrink {
-            border-color: fade-out($gray-darker, .9);
-            background-color: white;
-            .navbar-brand {
-                color: $gray-darker;
-                &:hover,
-                &:focus {
-                    color: $theme-primary;
-                }
-                .navbar-logo {
-                    --logo-color: #5f3b82;
-                }
-            }
-            .navbar-nav > li > a,
-            .navbar-nav > li > a:focus {
-                color: $gray-darker;
-                &:hover {
-                    color: $theme-primary;
-                }
-            }
-        }
+      }
     }
+  }
 }
