--- a/room.monks.cloud/src/stylesheets/main.scss
+++ b/room.monks.cloud/src/stylesheets/main.scss
@@ -1,7 +1,47 @@
-@import "@material/layout-grid/mdc-layout-grid";
-@import "common/colors";
-:root {
-  --mdc-layout-grid-margin-desktop: 24px;
-  --mdc-layout-grid-gutter-desktop: 20px;
-  --mdc-layout-grid-column-width-desktop: 60px;
+@font-face {
+  font-family: "AvantGarde";
+  src: url("/assets/css/AvantGardeDefectedRegular.eot");
+  src: url("/assets/css/AvantGardeDefectedRegular.eot?#iefix")
+      format("embedded-opentype"),
+    url("/assets/css/AvantGardeDefectedRegular.woff2") format("woff2"),
+    url("/assets/css/AvantGardeDefectedRegular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "AvantGarde";
+  src: url("/assets/css/AvantGardeDefectedRegular.eot");
+  src: url("/assets/css/AvantGardeDefectedRegular.eot?#iefix")
+      format("embedded-opentype"),
+    url("/assets/css/AvantGardeDefectedRegular.woff2") format("woff2"),
+    url("/assets/css/AvantGardeDefectedRegular.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+body {
+  background-color: #000;
+  color: #fff;
+  font-family: "AvantGarde", sans-serif;
+}
+
+iframe {
+  aspect-ratio: 16 / 9;
+  width: 100%;
+  height: auto;
+}
+
+@media (min-width: 839px) {
+  body {
+    display: grid;
+    grid-template:
+      "header header" 100px
+      "col1 col2" 1fr / 1fr 1fr;
+  }
+  header {
+    grid-area: header;
+  }
 }
