Lea's new avatar picture on Blockchain web

--- a/blockchain.topmonks.com/src/html/index.njk
+++ b/blockchain.topmonks.com/src/html/index.njk
@@ -364,7 +364,7 @@
           </div>
 
           <div class="team-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop">
-            {{ avatar("photo of Lea Petrášová", "avatar/lea-petrasova.jpg", 92) }}
+            {{ avatar("photo of Lea Petrášová", "avatar/lea-petrasova02.jpg", 92) }}
             <h3>Lea Petrášová</h3>
             <p>Blockchain & Crypto&nbsp;Projects</p>
             <a href="https://www.linkedin.com/in/leapetras/"
