--- a/studio.topmonks.com/src/html/index.njk
+++ b/studio.topmonks.com/src/html/index.njk
@@ -217,7 +217,7 @@
     <div class="mdc-layout-grid tm-layout-wrapper">
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Come pitch to us</h2>
+          <h2 class="h2_black">Come pitch to us</h2>
         </div>
       </div>
       <div class="white-box mdc-layout-grid__inner">
