Oprava v textu na Monkslab.cz

--- a/monkslab.cz/src/html/index.njk
+++ b/monkslab.cz/src/html/index.njk
@@ -247,7 +247,7 @@
       >
         <p>
           Monks Lab je otevřený kreativní prostor, který umožňuje kutilům
-          všeho druhu, kreativcům a studenům navrhovat a realizovat jejich
+          všeho druhu, kreativcům a studentům navrhovat a realizovat jejich
           nápady.
         </p>
 
