--- a/www.topmonks.com/src/html/macros/helpers.njk
+++ b/www.topmonks.com/src/html/macros/helpers.njk
@@ -1,10 +1,10 @@
+{% macro boolAttr(name, value) %}
+  {% if value %}{{ name }}{% endif %}
+{% endmacro %}
+
 {% macro sprite(id, altText, viewBox, classes, ariaHidden) %}
 {% set viewBox = viewBox or "0 0 1 1"%}
 <span class='sprite sprite--{{id}} {{classes}}' {% if ariaHidden %}aria-hidden='{{ ariaHidden }}'{% endif %}>
-
-{% macro sprite(id, altText, viewBox, classes) %}
-{% set viewBox = viewBox or "0 0 1 1"%}
-<span class='sprite sprite--{{id}} {{classes}}'>
   <svg viewBox="{{viewBox}}">
     <title>{{altText}}</title>
     <use xlink:href='#{{id}}'></use>
